@@ -23,7 +23,6 @@
 
 
 #include "main.h"
-#include "serial.h"
 #include "megatec.h"
 
 #include <stdio.h>
@@ -43,9 +42,6 @@
 
 #define IDENT_MAXTRIES   5
 #define IDENT_MINSUCCESS 3
-
-#define SEND_PACE    100000  /* 100ms interval between chars */
-#define READ_TIMEOUT 2       /* 2 seconds timeout on read */
 
 #define MAX_START_DELAY    9999
 #define MAX_SHUTDOWN_DELAY 99
@@ -248,8 +244,8 @@ static int check_ups(void)
 	int ret;
 
 	upsdebugx(2, "Sending \"Q1\" command...");
-	ser_send_pace(upsfd, SEND_PACE, "Q1%c", ENDCHAR);
-	ret = ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0);
+	comm->send("Q1%c", ENDCHAR);
+	ret = comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS);
 	if (ret < Q1_CMD_REPLY_LEN) {
 		upsdebugx(2, "Wrong answer to \"Q1\" command.");
 
@@ -268,8 +264,8 @@ static int get_ups_info(UPSInfo *info)
 	int ret;
 
 	upsdebugx(1, "Asking for UPS information (\"I\" command)...");
-	ser_send_pace(upsfd, SEND_PACE, "I%c", ENDCHAR);
-	ret = ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0);
+	comm->send("I%c", ENDCHAR);
+	ret = comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS);
 	if (ret < I_CMD_REPLY_LEN) {
 		upsdebugx(1, "UPS doesn't return any information about itself.");
 
@@ -298,8 +294,8 @@ static int get_firmware_values(FirmwareValues *values)
 	int ret;
 
 	upsdebugx(1, "Asking for UPS power ratings (\"F\" command)...");
-	ser_send_pace(upsfd, SEND_PACE, "F%c", ENDCHAR);
-	ret = ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0);
+	comm->send("F%c", ENDCHAR);
+	ret = comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS);
 	if (ret < F_CMD_REPLY_LEN) {
 		upsdebugx(1, "UPS doesn't return any information about its power ratings.");
 
@@ -321,8 +317,8 @@ static int run_query(QueryValues *values)
 	int ret;
 
 	upsdebugx(1, "Asking for UPS status (\"Q1\" command)...");
-	ser_send_pace(upsfd, SEND_PACE, "Q1%c", ENDCHAR);
-	ret = ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0);
+	comm->send("Q1%c", ENDCHAR);
+	ret = comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS);
 	if (ret < Q1_CMD_REPLY_LEN) {
 		upsdebugx(1, "UPS doesn't return any information about its status.");
 
@@ -469,7 +465,7 @@ void upsdrv_initinfo(void)
 	upsh.setvar = setvar;
 
 	/* clean up a possible shutdown in progress */
-	ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+	comm->send("C%c", ENDCHAR);
 
 	upsdebugx(1, "Done setting up the UPS.");
 }
@@ -568,8 +564,8 @@ void upsdrv_shutdown(void)
 {
 	upslogx(LOG_INFO, "Shutting down UPS immediately.");
 
-	ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
-	ser_send_pace(upsfd, SEND_PACE, "S%02dR%04d%c", shutdown_delay, start_delay, ENDCHAR);
+	comm->send("C%c", ENDCHAR);
+	comm->send("S%02dR%04d%c", shutdown_delay, start_delay, ENDCHAR);
 }
 
 
@@ -585,9 +581,9 @@ int instcmd(const char *cmdname, const char *extra)
 	 */
 
 	if (strcasecmp(cmdname, "test.battery.start.deep") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "TL%c", ENDCHAR);
+		comm->send("TL%c", ENDCHAR);
 
-		if (ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0) > 0) {
+		if (comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS) > 0) {
 			upslogx(LOG_NOTICE, "test.battery.start.deep not supported by UPS.");
 		} else {
 			upslogx(LOG_INFO, "Deep battery test started.");
@@ -597,9 +593,9 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "test.battery.start") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "T%c", ENDCHAR);
+		comm->send("T%c", ENDCHAR);
 
-		if (ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0) > 0) {
+		if (comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS) > 0) {
 			upslogx(LOG_NOTICE, "test.battery.start not supported by UPS.");
 		} else {
 			upslogx(LOG_INFO, "Battery test started.");
@@ -609,9 +605,9 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "test.battery.stop") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "CT%c", ENDCHAR);
+		comm->send("CT%c", ENDCHAR);
 
-		if (ser_get_line(upsfd, buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS, READ_TIMEOUT, 0) > 0) {
+		if (comm->recv(buffer, RECV_BUFFER_LEN, ENDCHAR, IGNCHARS) > 0) {
 			upslogx(LOG_NOTICE, "test.battery.stop not supported by UPS.");
 		} else {
 			upslogx(LOG_INFO, "Battery test stopped.");
@@ -621,10 +617,10 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "shutdown.return") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+		comm->send("C%c", ENDCHAR);
 		watchdog_enabled = 0;
 
-		ser_send_pace(upsfd, SEND_PACE, "S%02dR%04d%c", shutdown_delay, start_delay, ENDCHAR);
+		comm->send("S%02dR%04d%c", shutdown_delay, start_delay, ENDCHAR);
 
 		upslogx(LOG_INFO, "Shutdown (return) initiated.");
 
@@ -632,10 +628,10 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "shutdown.stayoff") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+		comm->send("C%c", ENDCHAR);
 		watchdog_enabled = 0;
 
-		ser_send_pace(upsfd, SEND_PACE, "S%02dR0000%c", shutdown_delay, ENDCHAR);
+		comm->send("S%02dR0000%c", shutdown_delay, ENDCHAR);
 
 		upslogx(LOG_INFO, "Shutdown (stayoff) initiated.");
 
@@ -643,7 +639,7 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "shutdown.stop") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+		comm->send("C%c", ENDCHAR);
 		watchdog_enabled = 0;
 
 		upslogx(LOG_INFO, "Shutdown canceled.");
@@ -652,7 +648,7 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "load.on") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+		comm->send("C%c", ENDCHAR);
 		watchdog_enabled = 0;
 
 		upslogx(LOG_INFO, "Turning load on.");
@@ -661,10 +657,10 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "load.off") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
+		comm->send("C%c", ENDCHAR);
 		watchdog_enabled = 0;
 
-		ser_send_pace(upsfd, SEND_PACE, "S00R0000%c", ENDCHAR);
+		comm->send("S00R0000%c", ENDCHAR);
 
 		upslogx(LOG_INFO, "Turning load off.");
 
@@ -684,8 +680,8 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "reset.watchdog") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "C%c", ENDCHAR);
-		ser_send_pace(upsfd, SEND_PACE, "S%02dR0001%c", watchdog_timeout, ENDCHAR);
+		comm->send("C%c", ENDCHAR);
+		comm->send("S%02dR0001%c", watchdog_timeout, ENDCHAR);
 
 		if (watchdog_enabled) {
 			upsdebugx(2, "Resetting the UPS watchdog.");
@@ -698,7 +694,7 @@ int instcmd(const char *cmdname, const char *extra)
 	}
 
 	if (strcasecmp(cmdname, "beeper.toggle") == 0) {
-		ser_send_pace(upsfd, SEND_PACE, "Q%c", ENDCHAR);
+		comm->send("Q%c", ENDCHAR);
 
 		upslogx(LOG_INFO, "Toggling UPS beeper.");
 
@@ -762,21 +758,20 @@ void upsdrv_makevartable(void)
 
 void upsdrv_banner(void)
 {
-	printf("Network UPS Tools %s - Megatec protocol driver %s [%s]\n", UPS_VERSION, DRV_VERSION, progname);
+	printf("Network UPS Tools %s - Megatec protocol driver %s [%s] [%s]\n", UPS_VERSION, DRV_VERSION, progname, comm->name);
 	printf("Carlos Rodrigues (c) 2003-2007\n\n");
 }
 
 
 void upsdrv_initups(void)
 {
-	upsfd = ser_open(device_path);
-	ser_set_speed(upsfd, device_path, B2400);
+	comm->open(device_path);
 }
 
 
 void upsdrv_cleanup(void)
 {
-	ser_close(upsfd, device_path);
+	comm->close(device_path);
 }
 
 
